--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "tufancalisir",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.6"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.9.6",
+    "astro-icon": "^0.8.1",
+    "tailwindcss": "^3.3.3"
   }
 }
