--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.9.6",
     "astro-icon": "^0.8.1",
+    "astro-netlify-cms": "^0.5.3",
     "tailwindcss": "^3.3.3"
   }
 }
