--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro-icon": "^0.8.1",
     "astro-netlify-cms": "^0.5.3",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
