--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "prebuild": "node ./src/js/scripts/optimizeImages.cjs",
+    "prebuild": "node optimizeImages.cjs",
     "build": "npm run prebuild astro build",
     "preview": "astro preview",
     "astro": "astro"
