--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "prebuild": "node src/js/scripts/optimizeImages.cjs",
-    "build": "npm run prebuild astro build",
+    "build": "npm run prebuild && npm run astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
